# pythia-edc

./: .env.template  .gitignore  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  compose.override.yml.template  demo  demo.env.example  docker-compose.yml.template  pyproject.toml  traefik-compose.yml
.github/workflows/: ci.yml
docs/: architecture-diagram.py  architecture-diagram.txt  layers-diagram.py  layers-diagram.txt
scripts/: start_consumer.sh  start_mock.sh  start_provider.sh
scripts/demo/: ask.py  down.sh  offline.py  smoke.sh  up.sh  verify.sh
scripts/demo/lib/: credentials.py  datasets.py  mock_server.py  seed.py  topology.py
scripts/demo/lib/data/: battery_passport_2024.json  energy_consumption_q1_2024.json  logistics_emissions_2023.json  pcf_product_footprint_2024.json  supplier_audit_2023.json  svhc_substances_q4_2023.json  water_usage_2023.json
src/pythia/: __init__.py  _http.py  ask.py  catalog.py  cli.py  config.py  credential.py  credential_source.py  errors.py  explain.py  llm.py  mcp.py  models.py  negotiate.py  synthesize.py  transfer.py  trust.py
src/pythia/shapes/: odrl_offer.ttl  vc.ttl
tests/: conftest.py  test_ask.py  test_ask_credential.py  test_catalog.py  test_cli.py  test_config.py  test_credential.py  test_credential_source.py  test_demo_credentials.py  test_demo_env_file.py  test_demo_smoke.py  test_explain.py  test_integration.py  test_models.py  test_negotiate.py  test_synthesize.py  test_tls_live.py  test_tls_wiring.py  test_topology.py  test_transfer.py  test_trust.py  test_up_script.py
