[project]
name = "pythia-edc"
version = "0.2.0"
description = "Ask your Gaia-X data space in plain language. MCP-native Python SDK for Eclipse EDC."
authors = [{ name = "Jonathan Kaleve", email = "jonathan@pareo.ai" }]
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.13"
keywords = ["gaia-x", "edc", "dataspace", "mcp", "eclipse-edc"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Internet :: WWW/HTTP",
    "Framework :: AsyncIO",
]

dependencies = [
    "httpx>=0.28",
    "pydantic>=2.13",
    "anyio>=4.13",
]

[project.optional-dependencies]
ask = [
    "sentence-transformers>=5.0",
]
mcp = [
    "mcp>=1.27",
]
trust = [
    "pyshacl>=0.31.0",
    "rdflib>=7.6.0",
    "cryptography>=48",
    "jcs>=0.2.1",
]
explain = [
    "pythia-edc[trust]",
]
synth = [
    "pythia-edc[ask]",
]
cli = [
    "rich>=15",
]
all = [
    "pythia-edc[ask,mcp,trust,explain,synth,cli]",
]
dev = [
    "pytest>=9.0",
    "pytest-asyncio>=1.4",
    "pytest-httpx>=0.36",
    "trustme>=1.2",
    "ruff>=0.15",
    "mypy>=2.1",
]

[project.scripts]
pythia = "pythia.cli:main"
pythia-mcp = "pythia.mcp:main"

[project.urls]
Homepage = "https://github.com/Pareo-AI/pythia-edc"
Repository = "https://github.com/Pareo-AI/pythia-edc"
Issues = "https://github.com/Pareo-AI/pythia-edc/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/pythia"]

[tool.hatch.build.targets.sdist]
# Ship the library + its tests/metadata only. The repo's demo stack (Docker,
# Traefik, seed scripts, demo data, env templates) is not part of the published
# package and would otherwise bloat the sdist and leak infra config to PyPI users.
include = [
    "src/pythia",
    "tests",
    "README.md",
    "LICENSE",
    "pyproject.toml",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
filterwarnings = ["ignore::DeprecationWarning:rdflib.*"]

[tool.ruff]
line-length = 100
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.ruff.lint.per-file-ignores]
"tests/test_integration.py" = ["E501"]  # Java CLI commands in docstring can't be wrapped
"scripts/demo/lib/datasets.py" = ["E501"]  # tabular data rows read better on one line
"docs/*.py" = ["E501", "E701", "E702"]  # ASCII-art diagram generators favour compact layout
